openshift/networking/my-nginx-ks.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-minikube1
  namespace: kube-system
spec:
  type: ExternalName
  externalName: hello-minikube1.default.svc.cluster.local
