openshift/networking/external-service-ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: catfact-service
  namespace: catfact
spec:
  type: ExternalName
  externalName: catfact.ninja
  ports:
    - name: https
      port: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catfact-ingress
  namespace: catfact
  annotations:
    # ingress.kubernetes.io/preserve-host: "false"
    ingress.kubernetes.io/secure-backends: "true"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # ingress.kubernetes.io/ssl-passthrough: "true"
    # kubernetes.io/ingress.class: "ingress-nginx"
    nginx.ingress.kubernetes.io/upstream-vhost: "catfact.ninja"
    ingress.kubernetes.io/preserve-host: "false"
spec:
  ingressClassName: "nginx"
  # tls:
  #   - hosts: catfact.ninja
  rules:
    - host: cat.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catfact-service
                port: 
                  number: 443
