openshift/networking/hello-world.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
        - name: hello-world-app
          image: docker.io/kicbase/echo-server:1.0
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: hello-john.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-app
                port:
                  number: 80
    - host: hello-jane.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-app
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  namespace: kube-system
spec:
  type: ExternalName
  externalName: hello-world-app.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  namespace: default
spec:
  type: ExternalName
  externalName: hello-world-app
  # ports:
  #   - name: http
  #     port: 80
  #     targetPort: 8080
  #     protocol: TCP
  # type: NodePort
  # selector:
  #   app: hello-world-app
