openshift/networking/test.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
spec:
  # ports:
  #   - name: http
  #     port: 80
  #     protocol: TCP
  #     targetPort: 80
  type: ExternalName
  externalName: hello-minikube1.default.svc.cluster.local
  # externalName: innovitiers-rhel-dev-1

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: nginx.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port: 
                  number: 80
